[package]
name = "ws-tcp-bridge"
version = "0.1.0"
edition = "2021"
description = "WebSocket to TCP bridge for browser clients (myteams_server protocol)"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
